# personal-finance-for-newbies

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creds/: creds.sample.json
data/in/: demo.xlsx
jupyters/: near_real_time_pf.ipynb  risk_parity.ipynb
src/: 0_🏠_Home.py  data_utils.py  input_output.py  mongo.py  risk.py  user.py
src/pages/: 1_🎯_Asset_Allocation_&_PnL.py  1_📈_Basic_Stats.py  2_📈_Return_Analysis.py  3_⚠️_Risk_Analysis.py  4_transactions.py  90_🌟_Aggiungi_elementi.py  90_🌟_Edit_Portfolio.py  91_☢️_Rimuovi_elemento.py
