[tool.poetry]
name = "personal-finance-for-newbies"
version = "0.1.2"
description = ""
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
yfinance = "0.2.48"
plotly = "5.24.1"
numpy = "1.26.4"
matplotlib = "3.10.0"
openpyxl = "3.1.5"
streamlit = "1.39.0"
black = "23.12.1"

[tool.poetry.dev-dependencies]
notebook = "6.5.4"
traitlets = "5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
